--- a/source/_components/button.scss
+++ b/source/_components/button.scss
@@ -2,19 +2,25 @@
   border: 0 solid;
   box-shadow: inset 0 0 20px rgba($back-color, 0);
   outline: 1px solid;
-  outline-color: rgba($back-color, .5);
-  outline-offset: 0px;
-  text-shadow: none;
+  outline: {
+    color: rgba($back-color, .5);
+    offset: 0px;
+  }
   color: $back-color;
   cursor: pointer;
-  font-size: 16px;
-  font-weight: 400;
+  font: {
+    size: 16px;
+    weight: 400;
+  };
+  text: {
+    shadow: none;
+    decoration: none;
+    transform: uppercase;
+  };
   line-height: 45px;
   margin: 0 2 * $padding;
   max-width: 160px;
   position: relative;
-  text-decoration: none;
-  text-transform: uppercase;
   width: 100%;
   background-color: transparent;
 
@@ -22,8 +28,10 @@
     text-decoration: none;
     border: 1px solid;
     box-shadow: inset 0 0 20px rgba($back-color, .5), 0 0 20px rgba($back-color, .2);
-    outline-color: rgba($back-color, 0);
-    outline-offset: 15px;
+    outline: {
+      color: rgba($back-color, 0);
+      offset: 15px;
+    }
     text-shadow: 1px 1px 2px #427388;
   }
 }
@@ -62,12 +70,12 @@
 
 @mixin gamer-button($back-color: $primary) {
   font-weight: 700;
+  cursor: pointer;
   border-radius: 2 * $padding;
   background-color: $back-color;
   box-shadow: 0 2px #999;
   margin: 0 2 * $padding;
   padding: 2*$padding 4*$padding;
-  cursor: pointer;
 
   &:active {
     transform: translateY(1px);
@@ -117,14 +125,14 @@
 }
 
 @mixin flat-button($back-color: $primary) {
+  color: $back-color;
   font-weight: 700;
+  cursor: pointer;
   background-color: transparent;
   border: 2px solid $back-color;
-  color: $back-color;
   border-radius: 2 * $padding;
   margin: 0 2 * $padding;
   padding: 2*$padding 5*$padding;
-  cursor: pointer;
 
   &:focus {
     outline: none;
@@ -174,12 +182,12 @@
 }
 
 @mixin flat-reverse-button($back-color: $primary) {
+  color: #000000;
   font-weight: 700;
   cursor: pointer;
+  border: 2px solid darken($back-color, 30);
   border-radius: 2 * $padding;
   background-color: $back-color;
-  border: 2px solid darken($back-color, 30);
-  color: #000000;
   margin: 0 2 * $padding;
   padding: 2*$padding 5*$padding;
 
