add container demo page and update Readme

--- a/artemis.css
+++ b/artemis.css
@@ -1106,7 +1106,7 @@ blockquote, quote {
   border: 2px solid #F3D250;
   border-radius: 6px;
   padding: 2vh 2vw;
-  margin: 5vh 0;
+  margin: 5vh 1vw;
   text-align: left;
 }
 .artemis-container > .artemis-container-title {
@@ -1118,10 +1118,10 @@ blockquote, quote {
   border-radius: 6px;
   color: #000000;
 }
-.artemis-container.is-centered > .artemis-container-title {
+.artemis-container.center > .artemis-container-title {
   margin: -2rem auto 1rem;
 }
-.artemis-container.is-right > .artemis-container-title {
+.artemis-container.right > .artemis-container-title {
   margin: -2rem 0 1rem auto;
 }
 
@@ -1129,7 +1129,7 @@ blockquote, quote {
   border: 2px solid #90CCF4;
   border-radius: 6px;
   padding: 2vh 2vw;
-  margin: 5vh 0;
+  margin: 5vh 1vw;
   text-align: left;
 }
 .artemis-container-secondary > .artemis-container-title {
@@ -1141,10 +1141,10 @@ blockquote, quote {
   border-radius: 6px;
   color: #000000;
 }
-.artemis-container-secondary.is-centered > .artemis-container-title {
+.artemis-container-secondary.center > .artemis-container-title {
   margin: -2rem auto 1rem;
 }
-.artemis-container-secondary.is-right > .artemis-container-title {
+.artemis-container-secondary.right > .artemis-container-title {
   margin: -2rem 0 1rem auto;
 }
 
@@ -1152,7 +1152,7 @@ blockquote, quote {
   border: 2px solid #5DA2D5;
   border-radius: 6px;
   padding: 2vh 2vw;
-  margin: 5vh 0;
+  margin: 5vh 1vw;
   text-align: left;
 }
 .artemis-container-secondary-dark > .artemis-container-title {
@@ -1164,10 +1164,10 @@ blockquote, quote {
   border-radius: 6px;
   color: #000000;
 }
-.artemis-container-secondary-dark.is-centered > .artemis-container-title {
+.artemis-container-secondary-dark.center > .artemis-container-title {
   margin: -2rem auto 1rem;
 }
-.artemis-container-secondary-dark.is-right > .artemis-container-title {
+.artemis-container-secondary-dark.right > .artemis-container-title {
   margin: -2rem 0 1rem auto;
 }
 
@@ -1175,7 +1175,7 @@ blockquote, quote {
   border: 2px solid #77dd77;
   border-radius: 6px;
   padding: 2vh 2vw;
-  margin: 5vh 0;
+  margin: 5vh 1vw;
   text-align: left;
 }
 .artemis-container-success > .artemis-container-title {
@@ -1187,10 +1187,10 @@ blockquote, quote {
   border-radius: 6px;
   color: #000000;
 }
-.artemis-container-success.is-centered > .artemis-container-title {
+.artemis-container-success.center > .artemis-container-title {
   margin: -2rem auto 1rem;
 }
-.artemis-container-success.is-right > .artemis-container-title {
+.artemis-container-success.right > .artemis-container-title {
   margin: -2rem 0 1rem auto;
 }
 
@@ -1198,7 +1198,7 @@ blockquote, quote {
   border: 2px solid #ffb347;
   border-radius: 6px;
   padding: 2vh 2vw;
-  margin: 5vh 0;
+  margin: 5vh 1vw;
   text-align: left;
 }
 .artemis-container-warning > .artemis-container-title {
@@ -1210,10 +1210,10 @@ blockquote, quote {
   border-radius: 6px;
   color: #000000;
 }
-.artemis-container-warning.is-centered > .artemis-container-title {
+.artemis-container-warning.center > .artemis-container-title {
   margin: -2rem auto 1rem;
 }
-.artemis-container-warning.is-right > .artemis-container-title {
+.artemis-container-warning.right > .artemis-container-title {
   margin: -2rem 0 1rem auto;
 }
 
@@ -1221,7 +1221,7 @@ blockquote, quote {
   border: 2px solid #F78888;
   border-radius: 6px;
   padding: 2vh 2vw;
-  margin: 5vh 0;
+  margin: 5vh 1vw;
   text-align: left;
 }
 .artemis-container-danger > .artemis-container-title {
@@ -1233,10 +1233,10 @@ blockquote, quote {
   border-radius: 6px;
   color: #000000;
 }
-.artemis-container-danger.is-centered > .artemis-container-title {
+.artemis-container-danger.center > .artemis-container-title {
   margin: -2rem auto 1rem;
 }
-.artemis-container-danger.is-right > .artemis-container-title {
+.artemis-container-danger.right > .artemis-container-title {
   margin: -2rem 0 1rem auto;
 }
 
@@ -1244,7 +1244,7 @@ blockquote, quote {
   border: 2px solid #ECECEC;
   border-radius: 6px;
   padding: 2vh 2vw;
-  margin: 5vh 0;
+  margin: 5vh 1vw;
   text-align: left;
 }
 .artemis-container-white > .artemis-container-title {
@@ -1256,10 +1256,10 @@ blockquote, quote {
   border-radius: 6px;
   color: #000000;
 }
-.artemis-container-white.is-centered > .artemis-container-title {
+.artemis-container-white.center > .artemis-container-title {
   margin: -2rem auto 1rem;
 }
-.artemis-container-white.is-right > .artemis-container-title {
+.artemis-container-white.right > .artemis-container-title {
   margin: -2rem 0 1rem auto;
 }
 
@@ -1267,7 +1267,7 @@ blockquote, quote {
   border: 2px solid #000000;
   border-radius: 6px;
   padding: 2vh 2vw;
-  margin: 5vh 0;
+  margin: 5vh 1vw;
   text-align: left;
 }
 .artemis-container-black > .artemis-container-title {
@@ -1279,10 +1279,10 @@ blockquote, quote {
   border-radius: 6px;
   color: #000000;
 }
-.artemis-container-black.is-centered > .artemis-container-title {
+.artemis-container-black.center > .artemis-container-title {
   margin: -2rem auto 1rem;
 }
-.artemis-container-black.is-right > .artemis-container-title {
+.artemis-container-black.right > .artemis-container-title {
   margin: -2rem 0 1rem auto;
 }
 .artemis-container-black > .artemis-container-title {
@@ -1293,7 +1293,7 @@ blockquote, quote {
   border: 2px solid #F3D250;
   border-radius: 6px;
   padding: 2vh 2vw;
-  margin: 5vh 0;
+  margin: 5vh 1vw;
   text-align: left;
   box-shadow: rgba(243, 210, 80, 0.56) 0px 22px 70px 4px;
 }
@@ -1306,10 +1306,10 @@ blockquote, quote {
   border-radius: 6px;
   color: #000000;
 }
-.artemis-container-shadow.is-centered > .artemis-container-title {
+.artemis-container-shadow.center > .artemis-container-title {
   margin: -2rem auto 1rem;
 }
-.artemis-container-shadow.is-right > .artemis-container-title {
+.artemis-container-shadow.right > .artemis-container-title {
   margin: -2rem 0 1rem auto;
 }
 
@@ -1317,7 +1317,7 @@ blockquote, quote {
   border: 2px solid #90CCF4;
   border-radius: 6px;
   padding: 2vh 2vw;
-  margin: 5vh 0;
+  margin: 5vh 1vw;
   text-align: left;
   box-shadow: rgba(144, 204, 244, 0.56) 0px 22px 70px 4px;
 }
@@ -1330,22 +1330,22 @@ blockquote, quote {
   border-radius: 6px;
   color: #000000;
 }
-.artemis-container-secondary-shadow.is-centered > .artemis-container-title {
+.artemis-container-secondary-shadow.center > .artemis-container-title {
   margin: -2rem auto 1rem;
 }
-.artemis-container-secondary-shadow.is-right > .artemis-container-title {
+.artemis-container-secondary-shadow.right > .artemis-container-title {
   margin: -2rem 0 1rem auto;
 }
 
-.artemis-container-secondary-dark {
+.artemis-container-secondary-dark-shadow {
   border: 2px solid #5DA2D5;
   border-radius: 6px;
   padding: 2vh 2vw;
-  margin: 5vh 0;
+  margin: 5vh 1vw;
   text-align: left;
   box-shadow: rgba(93, 162, 213, 0.56) 0px 22px 70px 4px;
 }
-.artemis-container-secondary-dark > .artemis-container-title {
+.artemis-container-secondary-dark-shadow > .artemis-container-title {
   display: table;
   padding: 0 0.5rem;
   margin: -1.8rem 0 1rem;
@@ -1354,10 +1354,10 @@ blockquote, quote {
   border-radius: 6px;
   color: #000000;
 }
-.artemis-container-secondary-dark.is-centered > .artemis-container-title {
+.artemis-container-secondary-dark-shadow.center > .artemis-container-title {
   margin: -2rem auto 1rem;
 }
-.artemis-container-secondary-dark.is-right > .artemis-container-title {
+.artemis-container-secondary-dark-shadow.right > .artemis-container-title {
   margin: -2rem 0 1rem auto;
 }
 
@@ -1365,7 +1365,7 @@ blockquote, quote {
   border: 2px solid #77dd77;
   border-radius: 6px;
   padding: 2vh 2vw;
-  margin: 5vh 0;
+  margin: 5vh 1vw;
   text-align: left;
   box-shadow: rgba(119, 221, 119, 0.56) 0px 22px 70px 4px;
 }
@@ -1378,10 +1378,10 @@ blockquote, quote {
   border-radius: 6px;
   color: #000000;
 }
-.artemis-container-success-shadow.is-centered > .artemis-container-title {
+.artemis-container-success-shadow.center > .artemis-container-title {
   margin: -2rem auto 1rem;
 }
-.artemis-container-success-shadow.is-right > .artemis-container-title {
+.artemis-container-success-shadow.right > .artemis-container-title {
   margin: -2rem 0 1rem auto;
 }
 
@@ -1389,7 +1389,7 @@ blockquote, quote {
   border: 2px solid #ffb347;
   border-radius: 6px;
   padding: 2vh 2vw;
-  margin: 5vh 0;
+  margin: 5vh 1vw;
   text-align: left;
   box-shadow: rgba(255, 179, 71, 0.56) 0px 22px 70px 4px;
 }
@@ -1402,10 +1402,10 @@ blockquote, quote {
   border-radius: 6px;
   color: #000000;
 }
-.artemis-container-warning-shadow.is-centered > .artemis-container-title {
+.artemis-container-warning-shadow.center > .artemis-container-title {
   margin: -2rem auto 1rem;
 }
-.artemis-container-warning-shadow.is-right > .artemis-container-title {
+.artemis-container-warning-shadow.right > .artemis-container-title {
   margin: -2rem 0 1rem auto;
 }
 
@@ -1413,7 +1413,7 @@ blockquote, quote {
   border: 2px solid #F78888;
   border-radius: 6px;
   padding: 2vh 2vw;
-  margin: 5vh 0;
+  margin: 5vh 1vw;
   text-align: left;
   box-shadow: rgba(247, 136, 136, 0.56) 0px 22px 70px 4px;
 }
@@ -1426,10 +1426,10 @@ blockquote, quote {
   border-radius: 6px;
   color: #000000;
 }
-.artemis-container-danger-shadow.is-centered > .artemis-container-title {
+.artemis-container-danger-shadow.center > .artemis-container-title {
   margin: -2rem auto 1rem;
 }
-.artemis-container-danger-shadow.is-right > .artemis-container-title {
+.artemis-container-danger-shadow.right > .artemis-container-title {
   margin: -2rem 0 1rem auto;
 }
 
@@ -1437,7 +1437,7 @@ blockquote, quote {
   border: 2px solid #ECECEC;
   border-radius: 6px;
   padding: 2vh 2vw;
-  margin: 5vh 0;
+  margin: 5vh 1vw;
   text-align: left;
   box-shadow: rgba(236, 236, 236, 0.56) 0px 22px 70px 4px;
 }
@@ -1450,10 +1450,10 @@ blockquote, quote {
   border-radius: 6px;
   color: #000000;
 }
-.artemis-container-white-shadow.is-centered > .artemis-container-title {
+.artemis-container-white-shadow.center > .artemis-container-title {
   margin: -2rem auto 1rem;
 }
-.artemis-container-white-shadow.is-right > .artemis-container-title {
+.artemis-container-white-shadow.right > .artemis-container-title {
   margin: -2rem 0 1rem auto;
 }
 
@@ -1461,7 +1461,7 @@ blockquote, quote {
   border: 2px solid #000000;
   border-radius: 6px;
   padding: 2vh 2vw;
-  margin: 5vh 0;
+  margin: 5vh 1vw;
   text-align: left;
   box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
 }
@@ -1474,10 +1474,10 @@ blockquote, quote {
   border-radius: 6px;
   color: #000000;
 }
-.artemis-container-black-shadow.is-centered > .artemis-container-title {
+.artemis-container-black-shadow.center > .artemis-container-title {
   margin: -2rem auto 1rem;
 }
-.artemis-container-black-shadow.is-right > .artemis-container-title {
+.artemis-container-black-shadow.right > .artemis-container-title {
   margin: -2rem 0 1rem auto;
 }
 .artemis-container-black-shadow > .artemis-container-title {
